test for TW-42058 Ignored test marked as successful (SBT runner, scala)